############################################################################################
#                 ____  _ _         _   _      _    ____                                   #
#                | __ )| (_)_______| \ | | ___| |_ / ___|___  _ __ ___                     #
#                |  _ \| | |_  /_  /  \| |/ _ \ __| |   / _ \| '__/ _ \                    #
#                | |_) | | |/ / / /| |\  |  __/ |_| |__| (_) | | |  __/                    #
#                |____/|_|_/___/___|_| \_|\___|\__|\____\___/|_|  \___|                    #
#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[15] --> Fix Dancing Rune Weapon.
[14] --> Elemental focus(shaman talent) correct proc.
[13] --> Fix no combo points after Mind Control.
[12] --> Reset Duel Cooldowns, Hp, Mana, Rage and Runic Power.
[11] --> Add Passive Anticheat System.
[10] --> Fix Grounding Totem.
[9] --> Add PvP-Ranks System.
[8] --> Implemented Crowd Control Delay.
[7] --> Fix Slice and Dice and Honor Among Thieves.
[6] --> Add script hunterpet vendor.
[5] --> Insert change in Replace.
[4] --> Fix Gnomeregan Pride.
[3] --> Fix Flare and Death Grip.
[2] --> Misc small changes.
[1] --> Implement progressive MMR search range.